@@ -571,8 +571,9 @@
 		- ajout dans le checker de code source de l'API : ne pas utiliser printStackTrace
 		- test lors du chargement de la table de préférences : combinaisons manquantes
 	- options :
-		- Possibilité d'enchainer les tournois automatiquement, avec sélection automatique des joueurs. 
-		- Menu options modifié en conséquence (maintenant trois modes différents d'enchainement automatique)
+		- Possibilité d'enchainer les tournois automatiquement, avec sélection automatique des joueurs
+		- Et plusieurs modes sont possibles: aléatoire, pack, classement, confrontations 
+		- Menu options modifié en conséquence (maintenant trois modes différents d'enchainement automatique+options)
  	- gui :
  		- Correction d'un bug empêchant l'affichage correct des noms des matches lors des coupes
  		- Correction d'un bug empêchant de changer un joueur quant il y en a déjà 16 (en raison d'un 
